# local_llm

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
engine/: models.py  promp_builder.py  prompt_builder.py  urls.py  views.py
engine/llm/: registry.py  router.py  service.py
engine/migrations/: 0001_initial.py
engine/services/: llm.py
engine/static/: app.js  style.css
engine/static/mark/: marked.min.js
engine/templates/: index.html
engine/utils/: output_cleaner.py
services/: llm.py
