[project]
name = "ai-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.1.0",
    "openai>=2.24.0",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "whitenoise>=6.12.0",
]
